[package]
name = "mock-server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
chrono = "0.4.34"
dotenvy = "0.15.7"
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.113"
